; ModuleID = '/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_input.c_seat_refresh.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/video_output/wayland/extr_input.c_seat_refresh.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seat_data = type { i64, i32, i32* }

@INT64_MAX = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.seat_data*, i64)* @seat_refresh to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @seat_refresh(%struct.seat_data* %0, i64 %1) #0 {
  %3 = alloca %struct.seat_data*, align 8
  %4 = alloca i64, align 8
  store %struct.seat_data* %0, %struct.seat_data** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.seat_data*, %struct.seat_data** %3, align 8
  %6 = getelementptr inbounds %struct.seat_data, %struct.seat_data* %5, i32 0, i32 2
  %7 = load i32*, i32** %6, align 8
  %8 = icmp ne i32* %7, null
  br i1 %8, label %9, label %26

9:                                                ; preds = %2
  %10 = load %struct.seat_data*, %struct.seat_data** %3, align 8
  %11 = getelementptr inbounds %struct.seat_data, %struct.seat_data* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = load i64, i64* %4, align 8
  %14 = icmp sle i64 %12, %13
  br i1 %14, label %15, label %26

15:                                               ; preds = %9
  %16 = load %struct.seat_data*, %struct.seat_data** %3, align 8
  %17 = getelementptr inbounds %struct.seat_data, %struct.seat_data* %16, i32 0, i32 2
  %18 = load i32*, i32** %17, align 8
  %19 = load %struct.seat_data*, %struct.seat_data** %3, align 8
  %20 = getelementptr inbounds %struct.seat_data, %struct.seat_data* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 8
  %22 = call i32 @wl_pointer_set_cursor(i32* %18, i32 %21, i32* null, i32 0, i32 0)
  %23 = load i64, i64* @INT64_MAX, align 8
  %24 = load %struct.seat_data*, %struct.seat_data** %3, align 8
  %25 = getelementptr inbounds %struct.seat_data, %struct.seat_data* %24, i32 0, i32 0
  store i64 %23, i64* %25, align 8
  br label %26

26:                                               ; preds = %15, %9, %2
  ret void
}

declare dso_local i32 @wl_pointer_set_cursor(i32*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
